Fixed css error in site-header align:top

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,128 +1,128 @@
-body{
-    background-color:#222222;
-    font-family: 'Barlow', sans-serif;
-  }
+    body{
+        background-color:#222222;
+        font-family: 'Barlow', sans-serif;
+    }
 
-.container {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-/*Header element styling*/
-.site-header{
-    height: auto;
-    width: 100%;
-    display: flex;
-    border-bottom: 5px solid #555555;
-    flex-direction: row;
-    align-self: top;
-}
-/*Individual header elements*/
-.header-flex {
-    padding: 2%;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    height: 2vw;
-    width: 2vw;
-}
-/*Navigation link styling*/
-a {
-    color: #FFFFFF;
-    font-size: 1.5rem;
-}
-/*Social link styling*/
-.header-social {
-    display: flex;
-    justify-content: center;
-    flex-shrink: 2;
-    height: 2vw;
-    width: 2vw;
-    align-self: flex-end;
-}
+    .container {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    /*Header element styling*/
+    .site-header{
+        height: auto;
+        width: 100%;
+        display: flex;
+        border-bottom: 5px solid #555555;
+        flex-direction: row;
+        align-self: first baseline;
+    }
+    /*Individual header elements*/
+    .header-flex {
+        padding: 2%;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        height: 2vw;
+        width: 2vw;
+    }
+    /*Navigation link styling*/
+    a {
+        color: #FFFFFF;
+        font-size: 1.5rem;
+    }
+    /*Social link styling*/
+    .header-social {
+        display: flex;
+        justify-content: center;
+        flex-shrink: 2;
+        height: 2vw;
+        width: 2vw;
+        align-self: flex-end;
+    }
 
-.yt-icon {
-    display: flex;
-    max-width: 4vw;
-    max-height: 4vw;
-    justify-content: center;
-}
+    .yt-icon {
+        display: flex;
+        max-width: 4vw;
+        max-height: 4vw;
+        justify-content: center;
+    }
 
-.x-icon {
-    display: flex;
-    max-width: 4vw;
-    max-height: 4vw;
-    justify-content: center;
-}
-.insta-icon {
-    display: flex;
-    max-width: 4vw;
-    max-height: 4vw;
-    justify-content: center;
-}
+    .x-icon {
+        display: flex;
+        max-width: 4vw;
+        max-height: 4vw;
+        justify-content: center;
+    }
+    .insta-icon {
+        display: flex;
+        max-width: 4vw;
+        max-height: 4vw;
+        justify-content: center;
+    }
 
-.fb-icon {
-    display: flex;
-    max-width: 4vw;
-    max-height: 4vw;
-    justify-content: center;
-}
-/*Group image styling*/
-figure {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-    flex-basis: 15%;
-    /*make content fit width of flexbox*/
-    margin: 0% 0% 0% 0%;
-    width: 100%;
-    border-bottom: 5px solid #555555;
-}
+    .fb-icon {
+        display: flex;
+        max-width: 4vw;
+        max-height: 4vw;
+        justify-content: center;
+    }
+    /*Group image styling*/
+    figure {
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+        flex-basis: 15%;
+        /*make content fit width of flexbox*/
+        margin: 0% 0% 0% 0%;
+        width: 100%;
+        border-bottom: 5px solid #555555;
+    }
 
-.band-img {
-    display: flex;
-    max-width: 100%;
-    max-height: 150%;
-}
-/*Styling for news articles*/
-article {
-    display: flex;  
-    background-color: #777777;
-    border: 4px solid #555555;
-    height: 5rem;
-    justify-content: flex-start;
-    padding: 2%;
-}
+    .band-img {
+        display: flex;
+        max-width: 100%;
+        max-height: 150%;
+    }
+    /*Styling for news articles*/
+    article {
+        display: flex;  
+        background-color: #777777;
+        border: 4px solid #555555;
+        height: 5rem;
+        justify-content: flex-start;
+        padding: 2%;
+    }
 
-.date {
-    color: #FFFFFF;
-    font-size: 1.5rem;
-}
+    .date {
+        color: #FFFFFF;
+        font-size: 1.5rem;
+    }
 
-.news-article {
-    font-size: 1.3rem;
-    font-weight: bold;
-}
-/*Styling for footer*/
-footer {
-    display: flex;  
-    flex-direction: row;
-    padding: 2%;
-    max-width: 100%;
-    justify-content: space-between;
-}
+    .news-article {
+        font-size: 1.3rem;
+        font-weight: bold;
+    }
+    /*Styling for footer*/
+    footer {
+        display: flex;  
+        flex-direction: row;
+        padding: 2%;
+        max-width: 100%;
+        justify-content: space-between;
+    }
 
-.footer-logo {
-    max-width: 100%;
-    height: auto;
-}
+    .footer-logo {
+        max-width: 100%;
+        height: auto;
+    }
 
-.footer-info {
-    font-size: 1.5rem;
-    color: #FFFFFF;
-    align-self: flex-end;
-}
+    .footer-info {
+        font-size: 1.5rem;
+        color: #FFFFFF;
+        align-self: flex-end;
+    }
 
 
